ajustes links header

--- a/src/contato.html
+++ b/src/contato.html
@@ -51,7 +51,7 @@
           <div class="main-menu">
             <ul class="menu">
               <li>
-                <a href="http://www2.aclinicaoral.com.br/">Início</a>
+                <a href="">Início</a>
               </li>
               <li class="has-submenu">
                 <a href="#" class="text-active">Tratamentos</a>
@@ -60,32 +60,25 @@
                     <a href="#">Estética</a>
                     <ul class="submenu--estetica">
                       <li>
-                        <a
-                          href="http://www2.aclinicaoral.com.br/lente-de-contato-dental.html"
+                        <a href="lente-de-contato-dental.html"
                           >Lente de contato dental</a
                         >
                       </li>
                       <li>
-                        <a
-                          href="http://www2.aclinicaoral.com.br/facetas-de-porcelana.html"
+                        <a href="facetas-de-porcelana.html"
                           >Facetas de porcelanas</a
                         >
                       </li>
                       <li>
-                        <a
-                          href="http://www2.aclinicaoral.com.br/clareamento-dental.html"
-                          >Clareamento Dental</a
-                        >
+                        <a href="clareamento-dental.html">Clareamento Dental</a>
                       </li>
                       <li>
-                        <a
-                          href="http://www2.aclinicaoral.com.br/coroas-de-porcelana.html"
+                        <a href="coroas-de-porcelana.html"
                           >Coroas de Porcelanas</a
                         >
                       </li>
                       <li>
-                        <a
-                          href="http://www2.aclinicaoral.com.br/restauracao-dentaria.html"
+                        <a href="restauracao-dentaria.html"
                           >Restauração Dentária</a
                         >
                       </li>
@@ -95,87 +88,59 @@
                     <a href="#">Cirurgia</a>
                     <ul class="submenu--cirurgia">
                       <li>
-                        <a
-                          href="http://www2.aclinicaoral.com.br/dentes-do-siso.html"
-                          >Dentes do siso</a
-                        >
+                        <a href="dentes-do-siso.html">Dentes do siso</a>
                       </li>
                       <li>
-                        <a
-                          href="http://www2.aclinicaoral.com.br/implante-dentario.html"
-                          >Implante dentário</a
-                        >
+                        <a href="implante-dentario.html">Implante dentário</a>
                       </li>
                       <li>
-                        <a
-                          href="http://www2.aclinicaoral.com.br/cirurgia-ortognatica.html"
+                        <a href="cirurgia-ortognatica.html"
                           >Cirurgia Ortagnática</a
                         >
                       </li>
                     </ul>
                   </li>
                   <li>
-                    <a href="http://www2.aclinicaoral.com.br/ortodontia.html"
-                      >Otodontia</a
-                    >
+                    <a href="ortodontia.html">Otodontia</a>
                   </li>
                   <li>
-                    <a
-                      href="http://www2.aclinicaoral.com.br/tratamento-de-canal.html"
+                    <a href="tratamento-de-canal.html"
                       >Tratamento de Canal (Endodontia)</a
                     >
                   </li>
                   <li>
-                    <a
-                      href="http://www2.aclinicaoral.com.br/tratamento-da-gengiva.html"
+                    <a href="tratamento-da-gengiva.html"
                       >Tratamento da Gengiva (Periodontia)</a
                     >
                   </li>
                   <li>
-                    <a
-                      href="http://www2.aclinicaoral.com.br/disfuncao-do-atm.html"
-                      >Disfunção do ATM</a
-                    >
+                    <a href="disfuncao-do-atm.html">Disfunção do ATM</a>
                   </li>
                   <li>
-                    <a
-                      href="http://www2.aclinicaoral.com.br/odontologia-pre-natal.html"
+                    <a href="odontologia-pre-natal.html"
                       >Odontologia Pré-Natal</a
                     >
                   </li>
                   <li>
-                    <a
-                      href="http://www2.aclinicaoral.com.br/odontopediatria.html"
-                      >Odontopediatria</a
-                    >
+                    <a href="odontopediatria.html">Odontopediatria</a>
                   </li>
                 </ul>
               </li>
               <li>
-                <a href="http://www2.aclinicaoral.com.br/day-clinic.html"
-                  >Day Clinic</a
-                >
+                <a href="day-clinic.html">Day Clinic</a>
               </li>
               <li>
-                <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
+                <a href="equipe.html">Equipe</a>
               </li>
               <li>
-                <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
-                  >Depoimentos</a
-                >
+                <a href="depoimentos.html">Depoimentos</a>
               </li>
               <li>
-                <a href="http://www2.aclinicaoral.com.br/endereco.html"
-                  >Endereço</a
-                >
+                <a href="endereco.html">Endereço</a>
               </li>
-              
+
               <li>
-                <a
-                  href="http://www2.aclinicaoral.com.br/contato.html"
-                  class="link-active"
-                  >Contato</a
-                >
+                <a href="contato.html" class="link-active">Contato</a>
               </li>
             </ul>
           </div>
@@ -192,83 +157,43 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
               >×</a
             >
-            <a href="http://www2.aclinicaoral.com.br/" style="margin-top: 1rem"
-              >Início</a
-            >
-            <a
-              href="http://www2.aclinicaoral.com.br/day-clinic.html"
-              style="margin-bottom: -1rem"
+            <a href="" style="margin-top: 1rem">Início</a>
+            <a href="day-clinic.html" style="margin-bottom: -1rem"
               >Day Clinic</a
             >
 
             <button type="button" class="collapsible">Tratamentos</button>
             <div class="content">
-              <a href="http://www2.aclinicaoral.com.br/ortodontia.html"
-                >Ortodontia</a
-              >
-              <a href="http://www2.aclinicaoral.com.br/tratamento-de-canal.html"
+              <a href="ortodontia.html">Ortodontia</a>
+              <a href="tratamento-de-canal.html"
                 >Tratamento de canal (Endondontia)</a
               >
-              <a
-                href="http://www2.aclinicaoral.com.br/tratamento-da-gengiva.html"
+              <a href="tratamento-da-gengiva.html"
                 >Tratamento da gengiva (Periodontia)</a
               >
-              <a href="http://www2.aclinicaoral.com.br/disfuncao-do-atm.html"
-                >Disfunção do ATM</a
-              >
-              <a
-                href="http://www2.aclinicaoral.com.br/odontologia-pre-natal.html"
-                >Odontologia Pré-Natal</a
-              >
-              <a href="http://www2.aclinicaoral.com.br/odontopediatria.html"
-                >Odontopediatria</a
-              >
+              <a href="disfuncao-do-atm.html">Disfunção do ATM</a>
+              <a href="odontologia-pre-natal.html">Odontologia Pré-Natal</a>
+              <a href="odontopediatria.html">Odontopediatria</a>
             </div>
             <button type="button" class="collapsible">Estética</button>
             <div class="content">
-              <a
-                href="http://www2.aclinicaoral.com.br/lente-de-contato-dental.html"
-                >Lente de Contato Dental</a
-              >
-              <a
-                href="http://www2.aclinicaoral.com.br/facetas-de-porcelana.html"
-                >Facetas de Porcelana</a
-              >
-              <a href="http://www2.aclinicaoral.com.br/clareamento-dental.html"
-                >Clareamento Dental</a
-              >
-              <a href="http://www2.aclinicaoral.com.br/coroas-de-porcelana.html"
-                >Coroas de Porcelana</a
-              >
-              <a
-                href="http://www2.aclinicaoral.com.br/restauracao-dentaria.html"
-                >Restauração Dentária</a
-              >
+              <a href="lente-de-contato-dental.html">Lente de Contato Dental</a>
+              <a href="facetas-de-porcelana.html">Facetas de Porcelana</a>
+              <a href="clareamento-dental.html">Clareamento Dental</a>
+              <a href="coroas-de-porcelana.html">Coroas de Porcelana</a>
+              <a href="restauracao-dentaria.html">Restauração Dentária</a>
             </div>
             <button type="button" class="collapsible">Cirurgia</button>
             <div class="content">
-              <a href="http://www2.aclinicaoral.com.br/dentes-do-siso.html"
-                >Dentes do Siso</a
-              >
-              <a href="http://www2.aclinicaoral.com.br/implante-dentario.html"
-                >Implante Dentário</a
-              >
-              <a
-                href="http://www2.aclinicaoral.com.br/cirurgia-ortognatica.html"
-                >Cirurgia Ortognática</a
-              >
+              <a href="dentes-do-siso.html">Dentes do Siso</a>
+              <a href="implante-dentario.html">Implante Dentário</a>
+              <a href="cirurgia-ortognatica.html">Cirurgia Ortognática</a>
             </div>
-            <a
-              href="http://www2.aclinicaoral.com.br/equipe.html"
-              class="item-menu-mobile"
-              >Equipe</a
-            >
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
-              >Depoimentos</a
-            >
-            <a href="http://www2.aclinicaoral.com.br/endereco.html">Endereço</a>
-            
-            <a href="http://www2.aclinicaoral.com.br/contato.html">Contato</a>
+            <a href="equipe.html" class="item-menu-mobile">Equipe</a>
+            <a href="depoimentos.html">Depoimentos</a>
+            <a href="endereco.html">Endereço</a>
+
+            <a href="contato.html">Contato</a>
           </div>
 
           <button class="openbtn" onclick="openNav()">☰</button>
@@ -336,12 +261,11 @@
               <a href="https://www.instagram.com/aclinicaoral/"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
-              <a href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
+              <a
+                href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
                 ><i class="fa-brands fa-whatsapp"></i
               ></a>
-              <a href="./blog.html"
-                ><i class="fa-brands fa-blogger"></i
-              ></a>
+              <a href="./blog.html"><i class="fa-brands fa-blogger"></i></a>
             </div>
             <div class="endereco-footer">
               <p>A Clínica Oral - Dentista Vila Olímpia - 2023</p>
