--- a/src/page43.html
+++ b/src/page43.html
@@ -55,7 +55,7 @@
           <div class="main-menu">
             <ul class="menu">
               <li>
-                <a href="http://www2.aclinicaoral.com.br/" class="link-active"
+                <a href="" class="link-active"
                   >Início</a
                 >
               </li>
@@ -67,31 +67,31 @@
                     <ul class="submenu--estetica">
                       <li>
                         <a
-                          href="http://www2.aclinicaoral.com.br/lente-de-contato-dental.html"
+                          href="lente-de-contato-dental.html"
                           >Lente de contato dental</a
                         >
                       </li>
                       <li>
                         <a
-                          href="http://www2.aclinicaoral.com.br/facetas-de-porcelana.html"
+                          href="facetas-de-porcelana.html"
                           >Facetas de porcelanas</a
                         >
                       </li>
                       <li>
                         <a
-                          href="http://www2.aclinicaoral.com.br/clareamento-dental.html"
+                          href="clareamento-dental.html"
                           >Clareamento Dental</a
                         >
                       </li>
                       <li>
                         <a
-                          href="http://www2.aclinicaoral.com.br/coroas-de-porcelana.html"
+                          href="coroas-de-porcelana.html"
                           >Coroas de Porcelanas</a
                         >
                       </li>
                       <li>
                         <a
-                          href="http://www2.aclinicaoral.com.br/restauracao-dentaria.html"
+                          href="restauracao-dentaria.html"
                           >Restauração Dentária</a
                         >
                       </li>
@@ -102,74 +102,74 @@
                     <ul class="submenu--cirurgia">
                       <li>
                         <a
-                          href="http://www2.aclinicaoral.com.br/dentes-do-siso.html"
+                          href="dentes-do-siso.html"
                           >Dentes do siso</a
                         >
                       </li>
                       <li>
                         <a
-                          href="http://www2.aclinicaoral.com.br/implante-dentario.html"
+                          href="implante-dentario.html"
                           >Implante dentário</a
                         >
                       </li>
                       <li>
                         <a
-                          href="http://www2.aclinicaoral.com.br/cirurgia-ortognatica.html"
+                          href="cirurgia-ortognatica.html"
                           >Cirurgia Ortagnática</a
                         >
                       </li>
                     </ul>
                   </li>
                   <li>
-                    <a href="http://www2.aclinicaoral.com.br/ortodontia.html"
+                    <a href="ortodontia.html"
                       >Otodontia</a
                     >
                   </li>
                   <li>
                     <a
-                      href="http://www2.aclinicaoral.com.br/tratamento-de-canal.html"
+                      href="tratamento-de-canal.html"
                       >Tratamento de Canal (Endodontia)</a
                     >
                   </li>
                   <li>
                     <a
-                      href="http://www2.aclinicaoral.com.br/tratamento-da-gengiva.html"
+                      href="tratamento-da-gengiva.html"
                       >Tratamento da Gengiva (Periodontia)</a
                     >
                   </li>
                   <li>
                     <a
-                      href="http://www2.aclinicaoral.com.br/disfuncao-do-atm.html"
+                      href="disfuncao-do-atm.html"
                       >Disfunção do ATM</a
                     >
                   </li>
                   <li>
                     <a
-                      href="http://www2.aclinicaoral.com.br/odontologia-pre-natal.html"
+                      href="odontologia-pre-natal.html"
                       >Odontologia Pré-Natal</a
                     >
                   </li>
                   <li>
                     <a
-                      href="http://www2.aclinicaoral.com.br/odontopediatria.html"
+                      href="odontopediatria.html"
                       >Odontopediatria</a
                     >
                   </li>
                 </ul>
               </li>
               <li>
-                <a href="http://www2.aclinicaoral.com.br/day-clinic.html"
+                <a href="day-clinic.html"
                   >Day Clinic</a
                 >
               </li>
               <li>
-                <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
+                <a href="equipe.html">Equipe</a>
               </li>
-              <li><a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a></li>
-              <li><a href="http://www2.aclinicaoral.com.br/endereco.html">Endereço</a></li>
+              <li><a href="depoimentos.html">Depoimentos</a></li>
+              <li><a href="endereco.html">Endereço</a></li>
               
               <li>
-                <a href="http://www2.aclinicaoral.com.br/contato.html"
+                <a href="contato.html"
                   >Contato</a
                 >
               </li>
@@ -188,85 +188,85 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
               >×</a
             >
-            <a href="http://www2.aclinicaoral.com.br/" style="margin-top: 1rem"
+            <a href="" style="margin-top: 1rem"
               >Início</a
             >
             <a
-              href="http://www2.aclinicaoral.com.br/day-clinic.html"
+              href="day-clinic.html"
               style="margin-bottom: -1rem"
               >Day Clinic</a
             >
 
             <button type="button" class="collapsible">Tratamentos</button>
             <div class="content">
-              <a href="http://www2.aclinicaoral.com.br/ortodontia.html"
+              <a href="ortodontia.html"
                 >Ortodontia</a
               >
-              <a href="http://www2.aclinicaoral.com.br/tratamento-de-canal.html"
+              <a href="tratamento-de-canal.html"
                 >Tratamento de canal (Endondontia)</a
               >
               <a
-                href="http://www2.aclinicaoral.com.br/tratamento-da-gengiva.html"
+                href="tratamento-da-gengiva.html"
                 >Tratamento da gengiva (Periodontia)</a
               >
-              <a href="http://www2.aclinicaoral.com.br/disfuncao-do-atm.html"
+              <a href="disfuncao-do-atm.html"
                 >Disfunção do ATM</a
               >
               <a
-                href="http://www2.aclinicaoral.com.br/odontologia-pre-natal.html"
+                href="odontologia-pre-natal.html"
                 >Odontologia Pré-Natal</a
               >
-              <a href="http://www2.aclinicaoral.com.br/odontopediatria.html"
+              <a href="odontopediatria.html"
                 >Odontopediatria</a
               >
             </div>
             <button type="button" class="collapsible">Estética</button>
             <div class="content">
               <a
-                href="http://www2.aclinicaoral.com.br/lente-de-contato-dental.html"
+                href="lente-de-contato-dental.html"
                 >Lente de Contato Dental</a
               >
               <a
-                href="http://www2.aclinicaoral.com.br/facetas-de-porcelana.html"
+                href="facetas-de-porcelana.html"
                 >Facetas de Porcelana</a
               >
-              <a href="http://www2.aclinicaoral.com.br/clareamento-dental.html"
+              <a href="clareamento-dental.html"
                 >Clareamento Dental</a
               >
-              <a href="http://www2.aclinicaoral.com.br/coroas-de-porcelana.html"
+              <a href="coroas-de-porcelana.html"
                 >Coroas de Porcelana</a
               >
               <a
-                href="http://www2.aclinicaoral.com.br/restauracao-dentaria.html"
+                href="restauracao-dentaria.html"
                 >Restauração Dentária</a
               >
             </div>
             <button type="button" class="collapsible">Cirurgia</button>
             <div class="content">
-              <a href="http://www2.aclinicaoral.com.br/dentes-do-siso.html"
+              <a href="dentes-do-siso.html"
                 >Dentes do Siso</a
               >
-              <a href="http://www2.aclinicaoral.com.br/implante-dentario.html"
+              <a href="implante-dentario.html"
                 >Implante Dentário</a
               >
               <a
-                href="http://www2.aclinicaoral.com.br/cirurgia-ortognatica.html"
+                href="cirurgia-ortognatica.html"
                 >Cirurgia Ortognática</a
               >
             </div>
             <a
-              href="http://www2.aclinicaoral.com.br/equipe.html"
+              href="equipe.html"
               class="item-menu-mobile"
               >Equipe</a
             >
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+            <a href="depoimentos.html"
               >Depoimentos</a
             >
-            <a href="http://www2.aclinicaoral.com.br/endereco.html"
+            <a href="endereco.html"
               >Endereço</a
             >
             
-            <a href="http://www2.aclinicaoral.com.br/contato.html">Contato</a>
+            <a href="contato.html">Contato</a>
           </div>
 
           <button class="openbtn" onclick="openNav()">☰</button>
@@ -326,7 +326,7 @@
                 </div>
                 <div class="link-recente-posts">
                   <a
-                    href="http://www2.aclinicaoral.com.br/page1.html"
+                    href="page1.html"
                     class="link-post-recente"
                     >COVID-19: A importância da saúde bucal no fortalecimento da
                     imunidade</a
@@ -334,21 +334,21 @@
                 </div>
                 <div class="link-recente-posts">
                   <a
-                    href="http://www2.aclinicaoral.com.br/page2.html"
+                    href="page2.html"
                     class="link-post-recente"
                     >Dente do siso: mitos e verdades</a
                   >
                 </div>
                 <div class="link-recente-posts">
                   <a
-                    href="http://www2.aclinicaoral.com.br/page3.html"
+                    href="page3.html"
                     class="link-post-recente"
                     >Sensibilidade dentária: sintomas, causas e tratamento</a
                   >
                 </div>
                 <div class="link-recente-posts">
                   <a
-                    href="http://www2.aclinicaoral.com.br/page4.html"
+                    href="page4.html"
                     class="link-post-recente"
                     >Mês do combate ao câncer: tudo o que você precisa saber sobre
                     câncer de boca</a
@@ -356,7 +356,7 @@
                 </div>
                 <div class="last-post-recent">
                   <a
-                    href="http://www2.aclinicaoral.com.br/page5.html"
+                    href="page5.html"
                     class="link-post-recente"
                     >Diabetes e saúde bucal: dúvidas comuns</a
                   >
