--- a/src/indexfelipe.html
+++ b/src/indexfelipe.html
@@ -50,9 +50,7 @@
           <div class="main-menu">
             <ul class="menu">
               <li>
-                <a href="http://www2.aclinicaoral.com.br/" class="link-active"
-                  >Início</a
-                >
+                <a href="" class="link-active">Início</a>
               </li>
               <li class="has-submenu">
                 <a href="#" class="text-active">Tratamentos</a>
@@ -61,32 +59,25 @@
                     <a href="#">Estética</a>
                     <ul class="submenu--estetica">
                       <li>
-                        <a
-                          href="http://www2.aclinicaoral.com.br/lente-de-contato-dental.html"
+                        <a href="lente-de-contato-dental.html"
                           >Lente de contato dental</a
                         >
                       </li>
                       <li>
-                        <a
-                          href="http://www2.aclinicaoral.com.br/facetas-de-porcelana.html"
+                        <a href="facetas-de-porcelana.html"
                           >Facetas de porcelanas</a
                         >
                       </li>
                       <li>
-                        <a
-                          href="http://www2.aclinicaoral.com.br/clareamento-dental.html"
-                          >Clareamento Dental</a
-                        >
+                        <a href="clareamento-dental.html">Clareamento Dental</a>
                       </li>
                       <li>
-                        <a
-                          href="http://www2.aclinicaoral.com.br/coroas-de-porcelana.html"
+                        <a href="coroas-de-porcelana.html"
                           >Coroas de Porcelanas</a
                         >
                       </li>
                       <li>
-                        <a
-                          href="http://www2.aclinicaoral.com.br/restauracao-dentaria.html"
+                        <a href="restauracao-dentaria.html"
                           >Restauração Dentária</a
                         >
                       </li>
@@ -96,77 +87,55 @@
                     <a href="#">Cirurgia</a>
                     <ul class="submenu--cirurgia">
                       <li>
-                        <a
-                          href="http://www2.aclinicaoral.com.br/dentes-do-siso.html"
-                          >Dentes do siso</a
-                        >
+                        <a href="dentes-do-siso.html">Dentes do siso</a>
                       </li>
                       <li>
-                        <a
-                          href="http://www2.aclinicaoral.com.br/implante-dentario.html"
-                          >Implante dentário</a
-                        >
+                        <a href="implante-dentario.html">Implante dentário</a>
                       </li>
                       <li>
-                        <a
-                          href="http://www2.aclinicaoral.com.br/cirurgia-ortognatica.html"
+                        <a href="cirurgia-ortognatica.html"
                           >Cirurgia Ortagnática</a
                         >
                       </li>
                     </ul>
                   </li>
                   <li>
-                    <a href="http://www2.aclinicaoral.com.br/ortodontia.html"
-                      >Otodontia</a
-                    >
+                    <a href="ortodontia.html">Otodontia</a>
                   </li>
                   <li>
-                    <a
-                      href="http://www2.aclinicaoral.com.br/tratamento-de-canal.html"
+                    <a href="tratamento-de-canal.html"
                       >Tratamento de Canal (Endodontia)</a
                     >
                   </li>
                   <li>
-                    <a
-                      href="http://www2.aclinicaoral.com.br/tratamento-da-gengiva.html"
+                    <a href="tratamento-da-gengiva.html"
                       >Tratamento da Gengiva (Periodontia)</a
                     >
                   </li>
                   <li>
-                    <a
-                      href="http://www2.aclinicaoral.com.br/disfuncao-do-atm.html"
-                      >Disfunção do ATM</a
-                    >
+                    <a href="disfuncao-do-atm.html">Disfunção do ATM</a>
                   </li>
                   <li>
-                    <a
-                      href="http://www2.aclinicaoral.com.br/odontologia-pre-natal.html"
+                    <a href="odontologia-pre-natal.html"
                       >Odontologia Pré-Natal</a
                     >
                   </li>
                   <li>
-                    <a
-                      href="http://www2.aclinicaoral.com.br/odontopediatria.html"
-                      >Odontopediatria</a
-                    >
+                    <a href="odontopediatria.html">Odontopediatria</a>
                   </li>
                 </ul>
               </li>
               <li>
-                <a href="http://www2.aclinicaoral.com.br/day-clinic.html"
-                  >Day Clinic</a
-                >
+                <a href="day-clinic.html">Day Clinic</a>
               </li>
               <li>
-                <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
+                <a href="equipe.html">Equipe</a>
               </li>
-              <li><a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a></li>
-              <li><a href="http://www2.aclinicaoral.com.br/endereco.html">Endereço</a></li>
-              
+              <li><a href="depoimentos.html">Depoimentos</a></li>
+              <li><a href="endereco.html">Endereço</a></li>
+
               <li>
-                <a href="http://www2.aclinicaoral.com.br/contato.html"
-                  >Contato</a
-                >
+                <a href="contato.html">Contato</a>
               </li>
             </ul>
           </div>
@@ -183,46 +152,41 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
               >×</a
             >
-            <a href="http://www2.aclinicaoral.com.br/">Início</a>
-            <a href="http://www2.aclinicaoral.com.br/day-clinic.html"
-              >Day Clinic</a
-            >
+            <a href="">Início</a>
+            <a href="day-clinic.html">Day Clinic</a>
             <!-- <label for="dropdown1">Traramentos</label> -->
             <select id="dropdown1">
               <option value="">Tratamentos</option>
-              <option
-                value="http://www2.aclinicaoral.com.br/ortodontia.html"
-                data-href="http://www2.aclinicaoral.com.br/ortodontia.html"
-              >
+              <option value="ortodontia.html" data-href="ortodontia.html">
                 Ortodontia
               </option>
               <option
-                value="http://www2.aclinicaoral.com.br/tratamento-de-canal.html"
-                data-href="http://www2.aclinicaoral.com.br/tratamento-de-canal.html"
+                value="tratamento-de-canal.html"
+                data-href="tratamento-de-canal.html"
               >
                 Tratamento de canal (Endodontia)
               </option>
               <option
-                value="http://www2.aclinicaoral.com.br/tratamento-da-gengiva.html"
-                data-href="http://www2.aclinicaoral.com.br/tratamento-da-gengiva.html"
+                value="tratamento-da-gengiva.html"
+                data-href="tratamento-da-gengiva.html"
               >
                 Tratamento da gengiva (Periodontia)
               </option>
               <option
-                value="http://www2.aclinicaoral.com.br/disfuncao-do-atm.html"
-                data-href="http://www2.aclinicaoral.com.br/disfuncao-do-atm.html"
+                value="disfuncao-do-atm.html"
+                data-href="disfuncao-do-atm.html"
               >
                 Disfunção do ATM
               </option>
               <option
-                value="http://www2.aclinicaoral.com.br/odontologia-pre-natal.html"
-                data-href="http://www2.aclinicaoral.com.br/odontologia-pre-natal.html"
+                value="odontologia-pre-natal.html"
+                data-href="odontologia-pre-natal.html"
               >
                 Odontologia Pré-Natal
               </option>
               <option
-                value="http://www2.aclinicaoral.com.br/odontopediatria.html"
-                data-href="http://www2.aclinicaoral.com.br/odontopediatria.html"
+                value="odontopediatria.html"
+                data-href="odontopediatria.html"
               >
                 Odontopediatria
               </option>
@@ -232,32 +196,32 @@
             <select id="dropdown2">
               <option value="">Estética</option>
               <option
-                value="http://www2.aclinicaoral.com.br/lente-de-contato-dental.html"
-                data-href="http://www2.aclinicaoral.com.br/lente-de-contato-dental.html"
+                value="lente-de-contato-dental.html"
+                data-href="lente-de-contato-dental.html"
               >
                 Lente de Contato Dental
               </option>
               <option
-                value="http://www2.aclinicaoral.com.br/facetas-de-porcelana.html"
-                data-href="http://www2.aclinicaoral.com.br/facetas-de-porcelana.html"
+                value="facetas-de-porcelana.html"
+                data-href="facetas-de-porcelana.html"
               >
                 Facetas de Porcelana
               </option>
               <option
-                value="http://www2.aclinicaoral.com.br/clareamento-dental.html"
-                data-href="http://www2.aclinicaoral.com.br/clareamento-dental.html"
+                value="clareamento-dental.html"
+                data-href="clareamento-dental.html"
               >
                 Clareamento Dental
               </option>
               <option
-                value="http://www2.aclinicaoral.com.br/coroas-de-porcelana.html"
-                data-href="http://www2.aclinicaoral.com.br/coroas-de-porcelana.html"
+                value="coroas-de-porcelana.html"
+                data-href="coroas-de-porcelana.html"
               >
                 Coroas de Porcelana
               </option>
               <option
-                value="http://www2.aclinicaoral.com.br/restauracao-dentaria.html"
-                data-href="http://www2.aclinicaoral.com.br/restauracao-dentaria.html"
+                value="restauracao-dentaria.html"
+                data-href="restauracao-dentaria.html"
               >
                 Restauração Dentária
               </option>
@@ -267,29 +231,29 @@
             <select id="dropdown3">
               <option value="">Cirurgia</option>
               <option
-                value="http://www2.aclinicaoral.com.br/dentes-do-siso.html"
-                data-href="http://www2.aclinicaoral.com.br/dentes-do-siso.html"
+                value="dentes-do-siso.html"
+                data-href="dentes-do-siso.html"
               >
                 Dentes do Siso
               </option>
               <option
-                value="http://www2.aclinicaoral.com.br/implante-dentario.html"
-                data-href="http://www2.aclinicaoral.com.br/implante-dentario.html"
+                value="implante-dentario.html"
+                data-href="implante-dentario.html"
               >
                 Implante Dentário
               </option>
               <option
-                value="http://www2.aclinicaoral.com.br/cirurgia-ortognatica.html"
-                data-href="http://www2.aclinicaoral.com.br/cirurgia-ortognatica.html"
+                value="cirurgia-ortognatica.html"
+                data-href="cirurgia-ortognatica.html"
               >
                 Cirurgia Ortognática
               </option>
             </select>
-            <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a>
+            <a href="equipe.html">Equipe</a>
+            <a href="depoimentos.html">Depoimentos</a>
             <a href="#localizacao">Endereço</a>
-            
-            <a href="http://www2.aclinicaoral.com.br/contato.html">Contato</a>
+
+            <a href="contato.html">Contato</a>
           </div>
 
           <button class="openbtn" onclick="openNav()">☰</button>
@@ -306,12 +270,11 @@
               <a href="https://www.instagram.com/aclinicaoral/"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
-              <a href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
+              <a
+                href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
                 ><i class="fa-brands fa-whatsapp"></i
               ></a>
-              <a href="./blog.html"
-                ><i class="fa-brands fa-blogger"></i
-              ></a>
+              <a href="./blog.html"><i class="fa-brands fa-blogger"></i></a>
             </div>
             <div class="endereco-footer">
               <p>A Clínica Oral - Dentista Vila Olímpia - 2023</p>
