--- a/src/header.html
+++ b/src/header.html
@@ -65,7 +65,7 @@
           <div class="main-menu">
             <ul class="menu">
               <li>
-                <a href="index.html" class="link-active">Início</a>
+                <a href="/" class="link-active">Início</a>
               </li>
               <li class="has-submenu">
                 <a href="#" class="text-active">Tratamentos</a>
@@ -171,7 +171,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
               >×</a
             >
-            <a href="">Início</a>
+            <a href="/">Início</a>
             <a href="day-clinic.html">Day Clinic</a>
             <!-- <label for="dropdown1">Traramentos</label> -->
             <select id="dropdown1">
