--- a/src/day-clinic.html
+++ b/src/day-clinic.html
@@ -78,7 +78,7 @@
           <div class="main-menu">
             <ul class="menu">
               <li>
-                <a href="">Início</a>
+                <a href="/">Início</a>
               </li>
               <li class="has-submenu">
                 <a href="#" class="text-active">Tratamentos</a>
