--- a/src/page21.html
+++ b/src/page21.html
@@ -77,7 +77,7 @@
           <div class="main-menu">
             <ul class="menu">
               <li>
-                <a href="index.html" class="link-active">Início</a>
+                <a href="/" class="link-active">Início</a>
               </li>
               <li class="has-submenu">
                 <a href="#" class="text-active">Tratamentos</a>
