--- a/src/page43.html
+++ b/src/page43.html
@@ -65,7 +65,7 @@
           <div class="main-menu">
             <ul class="menu">
               <li>
-                <a href="" class="link-active"
+                <a href="/" class="link-active"
                   >Início</a
                 >
               </li>
