link inicio mobile

--- a/src/blog.html
+++ b/src/blog.html
@@ -185,7 +185,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
               >×</a
             >
-            <a href="" style="margin-top: 1rem">Início</a>
+            <a href="/" style="margin-top: 1rem">Início</a>
             <a href="day-clinic.html" style="margin-bottom: -1rem"
               >Day Clinic</a
             >
