--- a/src/equipe.html
+++ b/src/equipe.html
@@ -154,9 +154,6 @@
                 <a href="endereco.html">Endereço</a>
               </li>
               <li>
-                <a href="blog.html">Blog</a>
-              </li>
-              <li>
                 <a href="contato.html">Contato</a>
               </li>
             </ul>
@@ -174,7 +171,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
               >×</a
             >
-            <a href="" style="margin-top: 1rem">Início</a>
+            <a href="/" style="margin-top: 1rem">Início</a>
             <a href="day-clinic.html" style="margin-bottom: -1rem"
               >Day Clinic</a
             >
@@ -209,7 +206,6 @@
             <a href="equipe.html" class="item-menu-mobile">Equipe</a>
             <a href="depoimentos.html">Depoimentos</a>
             <a href="endereco.html">Endereço</a>
-            <a href="blog.html">Blog</a>
             <a href="contato.html">Contato</a>
           </div>
 
