--- a/src/page43.html
+++ b/src/page43.html
@@ -198,7 +198,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
               >×</a
             >
-            <a href="" style="margin-top: 1rem"
+            <a href="/" style="margin-top: 1rem"
               >Início</a
             >
             <a
