--- a/src/header.html
+++ b/src/header.html
@@ -491,10 +491,16 @@
       <section class="mobile-dayClinic">
         <div class="infos-mobile-dayClinic">
           <div class="ligar-mobile-dayClinic">
-            <a href=""> <i class="fa-solid fa-phone"></i> Ligar</a>
+            <a
+              href="https://api.whatsapp.com/send?phone=5511988711774&text=Oi, gostaria de agendar uma consulta"
+            >
+              <i class="fa-solid fa-phone"></i> Ligar</a
+            >
           </div>
           <div class="mapa-mobile-dayClinic">
-            <a href=""><i class="fa-solid fa-location-dot"></i> Mapa</a>
+            <a href="https://goo.gl/maps/PmnZHzsFP33oQsJL6"
+              ><i class="fa-solid fa-location-dot"></i> Mapa</a
+            >
           </div>
         </div>
       </section>
