--- a/src/testeAPI2.html
+++ b/src/testeAPI2.html
@@ -26,6 +26,16 @@
     <link rel="stylesheet" href="./resources/css/testeAPI.css" />
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-KDDMHBL"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <ul id="reviews-carousel"></ul>
 
     <script
