cookies de privacidade

--- a/src/index.html
+++ b/src/index.html
@@ -124,6 +124,17 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+    <!-- Popup de Cookies -->
+    <div class="cookie-popup" id="cookiePopup">
+      <p>
+        Este site usa cookies para garantir que você obtenha a melhor
+        experiência. <a href="/politica-de-privacidade">Saiba mais</a>
+      </p>
+      <button onclick="acceptCookies()">Aceitar</button>
+      <button onclick="rejectCookies()">Rejeitar</button>
+    </div>
+
     <main>
       <header>
         <nav>
@@ -616,7 +627,7 @@
     <script src="./resources/js/main.js"></script>
 
     <!--API Google-->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAd4U5ETE1wjqnXCVxoMBtx8Ez4Y2QBOUo&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCscZNmyXskxqdy_5tGEWWp1oL61sOGR4M&libraries=places"></script>
 
     <!--Carrousel-->
     <script
