--- a/src/index.html
+++ b/src/index.html
@@ -129,7 +129,7 @@
     <div class="cookie-popup" id="cookiePopup">
       <p>
         Este site usa cookies para garantir que você obtenha a melhor
-        experiência. <a href="/politica-de-privacidade">Saiba mais</a>
+        experiência. <a href="politica-de-privacidade.html">Saiba mais</a>
       </p>
       <button onclick="acceptCookies()">Aceitar</button>
       <button onclick="rejectCookies()">Rejeitar</button>
