--- a/src/page43.html
+++ b/src/page43.html
@@ -63,6 +63,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KDDMHBL"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+
+<!-- Popup de Cookies -->
+    <div class="cookie-popup" id="cookiePopup">
+      <p>
+        Este site usa cookies para garantir que você obtenha a melhor
+        experiência. <a href="politica-de-privacidade.html">Saiba mais</a>
+      </p>
+      <button onclick="acceptCookies()">Aceitar</button>
+      <button onclick="rejectCookies()">Rejeitar</button>
+    </div>
     <main>
       <header>
         <nav>
