--- a/src/teste-depoimentos.html
+++ b/src/teste-depoimentos.html
@@ -35,6 +35,16 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+    <!-- Popup de Cookies -->
+    <div class="cookie-popup" id="cookiePopup">
+      <p>
+        Este site usa cookies para garantir que você obtenha a melhor
+        experiência. <a href="politica-de-privacidade.html">Saiba mais</a>
+      </p>
+      <button onclick="acceptCookies()">Aceitar</button>
+      <button onclick="rejectCookies()">Rejeitar</button>
+    </div>
     <div id="reviews"></div>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCscZNmyXskxqdy_5tGEWWp1oL61sOGR4M&libraries=places"></script>
