--- a/src/teste-header-1.html
+++ b/src/teste-header-1.html
@@ -48,6 +48,16 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+    <!-- Popup de Cookies -->
+    <div class="cookie-popup" id="cookiePopup">
+      <p>
+        Este site usa cookies para garantir que você obtenha a melhor
+        experiência. <a href="politica-de-privacidade.html">Saiba mais</a>
+      </p>
+      <button onclick="acceptCookies()">Aceitar</button>
+      <button onclick="rejectCookies()">Rejeitar</button>
+    </div>
     <label for="dropdown1">Dropdown 1</label>
     <select id="dropdown1">
       <option value="">Selecione uma opção</option>
