--- a/src/tratamento-de-canal.html
+++ b/src/tratamento-de-canal.html
@@ -88,6 +88,16 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+    <!-- Popup de Cookies -->
+    <div class="cookie-popup" id="cookiePopup">
+      <p>
+        Este site usa cookies para garantir que você obtenha a melhor
+        experiência. <a href="politica-de-privacidade.html">Saiba mais</a>
+      </p>
+      <button onclick="acceptCookies()">Aceitar</button>
+      <button onclick="rejectCookies()">Rejeitar</button>
+    </div>
     <main>
       <header>
         <nav>
